<resources>
    <string name="app_name">BUGlobalMusicFestival</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_lineUp">"Lineup"</string>
    <string name="nav_plan">Personal Planner</string>
    <string name="nav_map">"Location Map"</string>
    <string name="nav_artist">Artist Info</string>
    <string name="nav_dbTest">Database Test (for dev)</string>
    <string name="move">Move to Personal Planner</string>
</resources>
