<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_lineUp"
        android:title="@string/nav_lineUp"
        android:icon="@mipmap/ic_schedule_black_24dp"
        />

    <item android:id="@+id/nav_plan"
        android:title="@string/nav_plan"
        android:icon="@mipmap/ic_map_black_24dp"
        />

    <item android:id="@+id/nav_map"
        android:title="@string/nav_map"
        android:icon="@mipmap/ic_map_black_24dp"
        />

    <item android:id="@+id/nav_artInfo"
        android:title="@string/nav_artist" />

    <item android:id="@+id/nav_databaseTest"
        android:title="@string/nav_dbTest" />

    <item android:id="@+id/nav_Youtube_test"
        android:title="YouTube test" />


</menu>